welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:27: error: Unmatched closing brace '}' ignored here
	}
        ^SnakeBuggle:31: error: Unmatched closing brace '}' ignored here
}
^